--- a/themes/ananke2/layouts/index.html
+++ b/themes/ananke2/layouts/index.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
-<article class="pa3 pa4-ns nested-copy-line-height nested-img">
-  <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
+<article class="pa3 nested-copy-line-height nested-img">
+  <section class="cf f4 tc-l center  lh-copy mid-gray">
     {{ .Content }}
   </section>
-  <aside class="flex-ns flex-wrap justify-around mt5">
+  <aside class="flex-ns flex-wrap justify-around ">
   {{ $mainSections := .Site.Params.mainSections | default (slice "post") }}
   {{ $section := where .Site.RegularPages "Section" "in" $mainSections }}
 
