--- a/themes/hugo-icon/layouts/partials/nav2.html
+++ b/themes/hugo-icon/layouts/partials/nav2.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="fh5co-menu-1">
 
-	<a href="#" data-nav-section="home">{{ with .Site.Params.nav }}{{ if isset . "logo" }}<img src={{ .logo | absURL }} height="20" alt="">{{ end }}{{ if (not (isset . "logo")) }}Accueil{{ end }}{{ end }}</a>
+	<a href="#" data-nav-section="home">{{ with .Site.Params.nav }}{{ if isset . "logo" }}<img src={{ .logo | absURL }} height="20" alt="">{{ end }}{{ if (not (isset . "logo")) }}Out{{ end }}{{ end }}</a>
 
 	{{ if .Site.Params.mission.enable }}
 	<a href="#" data-nav-section="mission">{{ with .Site.Params.nav.mission }}{{ . | markdownify }}{{ end }}</a>
@@ -21,7 +21,7 @@
 	<a href="#" data-nav-section="contact">{{ with .Site.Params.nav.contact }}{{ . | markdownify }}{{ end }}</a>
 	{{ end }}
 
-	<a href="./post/index.html" onclick="location.href='./post/index.html';">Out</a>
+	<a href="../index.html" onclick="location.href='../index.html';">Tout publique</a>
 	
       </div>
     </div>
