--- a/themes/hugo-icon/layouts/partials/services.html
+++ b/themes/hugo-icon/layouts/partials/services.html
@@ -4,7 +4,7 @@
   <div class="fh5co-video"><a href="{{ with .vidlink }}{{ . }}{{ end }}" class="popup-vimeo"><i class="icon-play2"></i></a> <span>Watch video</span></div>
   {{ end }}
   <div class="container">
-    <div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
+    <div class="fh5co-heading">
       <h2>{{ .title | markdownify }}</h2>
       <p>{{ .description | markdownify }}</p>
     </div>
