--- a/themes/hugo-icon/layouts/partials/hero.html
+++ b/themes/hugo-icon/layouts/partials/hero.html
@@ -1,8 +1,8 @@
-<div id="fh5co-home" class="js-fullheight-home" data-section="home" style="background-image: url({{ with .Site.Params.hero.img }}{{ . | absURL }}{{ end }}); text-shadow: 0 0 7px rgba(0,0,0, 1);" data-stellar-background-ratio="0.5">
+<div id="fh5co-home" data-section="home" style="background-image: url({{ with .Site.Params.hero.img }}{{ . | absURL }}{{ end }}); text-shadow: 0 0 7px rgba(0,0,0, 1);" >
   <div class="container">
     <div class="col-md-6">
-      <div class="js-fullheight-home fh5co-copy">
-	<div class="js-fullheight-home fh5co-copy-inner">
+      <div class="fh5co-copy">
+	<div class="fh5co-copy-inner">
 	  <h1>{{ with .Site.Params.hero.title }}{{ . | markdownify }}{{ end }}</h1>
 	  <h2>{{ with .Site.Params.hero.description }}{{ . | markdownify }}{{ end }}</h2>
 	</div>
