--- a/themes/hugo-icon/static/css/style.css
+++ b/themes/hugo-icon/static/css/style.css
@@ -194,14 +194,14 @@ p {
 }
 
 #fh5co-home {
-  min-height: 300px;
-  background-size: cover;
+  height: 500px;
+  background-position: center;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-size: cover;  
+  position: relative;
   -webkit-box-shadow: inset -1px -11px 21px -15px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: inset -1px -11px 21px -15px rgba(0, 0, 0, 0.75);
   box-shadow: inset -1px -11px 21px -15px rgba(0, 0, 0, 0.75);
-  position: relative;
 }
 #fh5co-home > .container {
   position: relative;
